[package]
name = "my_utils"
version = "0.1.0"
authors = ["obj"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.10"
hyper-native-tls = "0.2"
notify-rust = "3.4"
lazy_static = "0.2"
bindkey = "0.2"

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
codegen-units = 1

[[bin]]
name = "my_utils"
path = "./src/bin.rs"
